Fixed a few broken styles in the template search

--- a/app/assets/sass/uswds/_uswds-theme-custom-styles.scss
+++ b/app/assets/sass/uswds/_uswds-theme-custom-styles.scss
@@ -149,14 +149,10 @@ td.table-empty-message {
    margin: 0 units(0.5);
 }
 
-.usa-template-list-template {
+.usa-template-list-template, .template-list-template {
    background: url(../img/material-icons/description.svg) no-repeat;
    padding-left: units(4);
    display: inline-flex; 
-}
-
-.template-list-item-hint {
-   padding-left: units(4);
 }
 
 .js-enabled .live-search {
@@ -191,7 +187,8 @@ td.table-empty-message {
 
 .sticky-template-form {
    margin: 0;
-   padding: 0;
+   border: 1px solid color("gray-cool-10");
+   padding: units(2);
    &:focus {
       outline-offset: units(1);
    }
@@ -282,7 +279,12 @@ td.table-empty-message {
    max-height: 500px;
    overflow-y: auto;
    padding-left: units(1);
-   margin: units(2) 0; 
+   margin: units(2) 0 units(5);
+   ul {
+      padding: 0; 
+      margin: 0; 
+      list-style: none; 
+   } 
 }
 
 // Tabs
